<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/textView_schoolNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Brooklyn Generation School" />

        <!--General details section-->
        <TextView
            android:id="@+id/textView_generalInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/general_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintTop_toBottomOf="@id/textView_schoolNameTitle" />

        <TextView
            android:id="@+id/textView_schoolOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/school_overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/textView_generalInformation"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/textView_schoolOverviewValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/textView_schoolOverview"
            tools:layout_editor_absoluteX="8dp"
            tools:text="This school invites students and families to a four-year conversation to ensure they graduate with competence and confidence. Our students receive intensive, small group instruction on a daily basis and complete projects that connect learning to life. Brooklyn Generation School students benefit from our month-long College and Career Intensives, with dedicated time to focus on the college process and career exploration. Our teachers continually monitor and assess each studentÂ’s progress and keep parents informed of their childÂ’s academic strengths and challenges. Our liberal arts curriculum provides students with the skills, knowledge, and experience needed to become active and productive members of their community." />

        <TextView
            android:id="@+id/textView_languageClasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/language_classes"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/textView_schoolOverviewValue"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/textView_languageClassesValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/textView_languageClasses"
            tools:layout_editor_absoluteX="8dp"
            tools:text="French" />

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/textView_languageClassesValue"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/textView_locationValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_location"
            tools:text="6565 Flatlands Avenue, Brooklyn NY 11236" />

        <!--Contact details section-->
        <TextView
            android:id="@+id/textView_contactDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/contact_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintTop_toBottomOf="@id/textView_locationValue" />

        <TextView
            android:id="@+id/textView_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/textView_contactDetails"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/textView_phoneNumberValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/textView_phoneNumber"
            tools:layout_editor_absoluteX="8dp"
            tools:text="718-968-4200" />

        <TextView
            android:id="@+id/textView_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/website"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/textView_phoneNumberValue"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/textView_websiteValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/textView_website"
            tools:layout_editor_absoluteX="8dp"
            tools:text="www.generationschools.org" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/textView_websiteValue"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/textView_emailValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/textView_email"
            tools:layout_editor_absoluteX="8dp"
            tools:text="admissions@brooklyngeneration.org" />

        <!--SAT Details section-->
        <TextView
            android:id="@+id/textView_satDetailsSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sat_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/textView_emailValue"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView_numberOfTestTakers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/number_of_test_takers"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/textView_satDetailsSubtitle"
            tools:layout_editor_absoluteX="8dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView_numberOfTestTakersValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/textView_numberOfTestTakers"
            tools:layout_editor_absoluteX="8dp"
            tools:text="56"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView_mathAvgScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/math_avg_score"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/textView_numberOfTestTakersValue"
            tools:layout_editor_absoluteX="8dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView_mathAvgScoreValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/textView_mathAvgScore"
            tools:layout_editor_absoluteX="8dp"
            tools:text="386"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView_criticalReadingAvgScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/critical_reading_avg_score"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/textView_mathAvgScoreValue"
            tools:layout_editor_absoluteX="8dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView_criticalReadingAvgScoreValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/textView_criticalReadingAvgScore"
            tools:layout_editor_absoluteX="8dp"
            tools:text="377"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView_writingAvgScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/writing_avg_score"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/textView_criticalReadingAvgScoreValue"
            tools:layout_editor_absoluteX="8dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView_textView_writingAvgScoreValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_writingAvgScore"
            tools:layout_editor_absoluteX="8dp"
            tools:text="346"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>